--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -117,7 +117,9 @@
     "@types/react": "17.0.44"
   },
   "dependencies": {
+    "react-date-picker": "^8.4.0",
     "react-datetime-picker": "^3.5.0",
+    "react-time-picker": "^4.5.0",
     "tsc-watch": "^5.0.3"
   },
   "devDependencies": {
@@ -129,6 +131,7 @@
     "@types/lodash": "^4.14.184",
     "@types/mdurl": "^1.0.2",
     "@types/react-datetime-picker": "^3.4.1",
+    "@types/react-time-picker": "^4.0.2",
     "@types/react-native": "^0.69.1",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
@@ -167,7 +170,6 @@
   },
   "peerDependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "react-datetime-picker": "^3.5.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/blur": "^4.2.0",
     "@react-native-community/datetimepicker": "^6.3.2",
@@ -179,6 +181,9 @@
     "moment-timezone": "^0.5.35",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-date-picker": "^8.4.0",
+    "react-datetime-picker": "^3.5.0",
+    "react-time-picker": "^4.5.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
     "react-native": "0.69.4",
