--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -49,6 +49,7 @@
     "moment-timezone": "^0.5.34",
     "react": "18.0.0",
     "react-app-polyfill": "^3.0.0",
+    "react-date-picker": "^8.4.0",
     "react-datetime-picker": "^3.5.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
@@ -64,7 +65,8 @@
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-time-picker": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
