--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -45,7 +45,7 @@
     "expo-font": "~10.2.0",
     "expo-haptics": "~11.3.0",
     "expo-status-bar": "~1.4.0",
-    "ferns-ui": "~0.7.0",
+    "ferns-ui": "~0.11.3",
     "moment-timezone": "^0.5.34",
     "react": "18.0.0",
     "react-app-polyfill": "^3.0.0",
@@ -62,6 +62,7 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.4",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "react-router": "^6.3.0",
