Change TapToEdit from uncontrolled to controlled component
Previously, TapToEdit was managing its state internally only. This
caused a bunch of data sync issues (and was more useful in the pre-hooks
era). Switch this to a controlled component to fix up a few bugs it has
been experiencing.

Also update package.json for a few missing peer deps.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -182,6 +182,7 @@
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
+    "react-datetime-picker": "^4.0.1",
     "react-dom": "18.2.0",
     "react-native": "0.69.4",
     "react-native-calendars": "^1.1288.2",
@@ -192,6 +193,7 @@
     "react-native-portalize": "^1.0.7",
     "react-native-svg": "^13.0.0",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-time-picker": "^5.0.0"
   }
 }
