--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -177,6 +177,7 @@
     "@react-native-picker/picker": "2.4.4",
     "expo-font": "^10.0.5",
     "expo-haptics": "~11.3.0",
+    "expo-image-picker": "^13.3.1",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.35",
