--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -145,6 +145,7 @@
     "eslint-plugin-unused-imports": "2.0.0",
     "expo-font": "^10.0.5",
     "expo-haptics": "~11.3.0",
+    "expo-image-picker": "^13.3.1",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.35",
@@ -176,13 +177,14 @@
     "@react-native-picker/picker": "2.4.4",
     "expo-font": "^10.0.5",
     "expo-haptics": "~11.3.0",
+    "expo-image-picker": "^13.3.1",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.35",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
-    "react-dev-utils": "^12.0.1",
     "react-datetime-picker": "^4.0.1",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
     "react-native": "0.69.4",
     "react-native-calendars": "^1.1288.2",
