--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -117,6 +117,7 @@
     "@types/react": "17.0.44"
   },
   "dependencies": {
+    "expo-image-picker": "^13.3.1",
     "tsc-watch": "^5.0.3"
   },
   "devDependencies": {
@@ -145,6 +146,7 @@
     "eslint-plugin-unused-imports": "2.0.0",
     "expo-font": "^10.0.5",
     "expo-haptics": "~11.3.0",
+    "expo-image-manipulator": "^10.4.0",
     "expo-image-picker": "^13.3.1",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
@@ -177,6 +179,7 @@
     "@react-native-picker/picker": "2.4.4",
     "expo-font": "^10.0.5",
     "expo-haptics": "~11.3.0",
+    "expo-image-manipulator": "^10.4.0",
     "expo-image-picker": "^13.3.1",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
