--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -148,6 +148,7 @@
     "expo-haptics": "~11.3.0",
     "expo-image-manipulator": "^10.4.0",
     "expo-image-picker": "^13.3.1",
+    "libphonenumber-js": "^1.10.19",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.35",
