--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -67,6 +67,7 @@
     "react-native-reanimated": "~2.10.0",
     "react-native-safe-area-context": "4.3.4",
     "react-native-svg": "12.3.0",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.7",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
