--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -167,6 +167,7 @@
     "react-native-picker-select": "^8.0.0",
     "react-native-portalize": "^1.0.7",
     "react-native-svg": "^13.0.0",
+    "react-native-toast-notifications": "^3.3.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-time-picker": "^5.0.0",
@@ -198,6 +199,7 @@
     "react-native-picker-select": "^8.0.0",
     "react-native-portalize": "^1.0.7",
     "react-native-svg": "^13.0.0",
+    "react-native-toast-notifications": "^3.3.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-time-picker": "^5.0.0"
