--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build-web": "expo build:web",
+    "build-ui": "cd ../ui && yarn && yarn build && cp -a dist/. ../ui-demo/node_modules/ferns-ui/dist/ && cd ../ui-demo",
+    "build-web": "yarn build-ui && expo build:web",
     "build-ios": "expo build:ios",
     "build-android": "expo build:android",
     "eject": "expo eject",
