--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -9,10 +9,8 @@
     "web": "expo start --web",
     "build-ui": "cd ../ui && yarn && yarn build && cp -a dist/. ../ui-demo/node_modules/ferns-ui/dist/ && cd ../ui-demo",
     "build-preview": "yarn build-ui && yarn build-web",
-    "build-web": "expo build:web",
-    "build-ios": "expo build:ios",
-    "build-android": "expo build:android",
-    "eject": "expo eject",
+    "build-web": "npx expo export:web",
+    "eject": "npx expo eject",
     "lint": "eslint \"**/*.ts*\"",
     "lintfix": "eslint --fix \"**/*.ts*\""
   },
@@ -38,62 +36,59 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/blur": "^4.2.0",
-    "@react-native-community/datetimepicker": "6.2.0",
-    "@react-native-picker/picker": "2.4.2",
-    "@types/react-datetime-picker": "^3.4.1",
-    "expo": "^46.0.0",
-    "expo-font": "~10.2.0",
-    "expo-haptics": "~11.3.0",
-    "expo-image-manipulator": "^10.4.0",
-    "expo-image-picker": "~13.3.1",
-    "expo-status-bar": "~1.4.0",
-    "ferns-ui": "0.22.5",
-    "libphonenumber-js": "^1.10.16",
-    "moment-timezone": "^0.5.34",
-    "react": "18.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/blur": "^4.3.0",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "2.4.8",
+    "expo": "^48.0.9",
+    "expo-font": "~11.1.1",
+    "expo-haptics": "~12.2.1",
+    "expo-image-manipulator": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-status-bar": "~1.4.4",
+    "ferns-ui": "0.23.2",
+    "libphonenumber-js": "^1.10.21",
+    "moment-timezone": "^0.5.41",
+    "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
-    "react-date-picker": "^8.4.0",
-    "react-datetime-picker": "^3.5.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-calendars": "^1.1286.0",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-date-picker": "^9.2.0",
+    "react-datetime-picker": "^4.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.4",
+    "react-native-calendars": "^1.1293.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-haptic-feedback": "^1.14.0",
-    "react-native-hyperlink": "^0.0.19",
-    "react-native-modalize": "^2.0.13",
-    "react-native-permissions": "^3.6.0",
+    "react-native-hyperlink": "^0.0.22",
+    "react-native-modalize": "^2.1.1",
+    "react-native-permissions": "^3.7.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~2.10.0",
-    "react-native-safe-area-context": "4.3.4",
-    "react-native-svg": "12.3.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
     "react-native-toast-notifications": "^3.3.1",
-    "react-native-web": "~0.18.7",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-time-picker": "^4.5.0"
+    "react-native-web": "~0.18.11",
+    "react-router": "^6.8.2",
+    "react-router-dom": "^6.8.2",
+    "react-time-picker": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@types/react": "~18.0.0",
-    "@types/react-native": "~0.69.1",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "eslint": "^8.15.0",
+    "@babel/core": "^7.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.35.0",
     "eslint-config-ferns": "^0.4.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lodash": "^7.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "expo-cli": "^6.0.5",
-    "prettier": "^2.6.2",
-    "typescript": "^4.6.3"
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.4"
   }
 }
