--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -47,7 +47,7 @@
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
-    "ferns-ui": "0.23.2",
+    "ferns-ui": "0.25.0",
     "libphonenumber-js": "^1.10.21",
     "moment-timezone": "^0.5.41",
     "react": "18.2.0",
@@ -71,7 +71,8 @@
     "react-native-web": "~0.18.11",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
-    "react-time-picker": "^5.2.0"
+    "react-time-picker": "^5.2.0",
+    "swiper": "^9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
