--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -67,6 +67,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
+    "react-native-swiper-flatlist": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.11",
     "react-router": "^6.8.2",
