--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -113,6 +113,7 @@
     ]
   },
   "dependencies": {
+    "react-native-swiper-flatlist": "^3.1.1",
     "tsc-watch": "^5.0.3"
   },
   "devDependencies": {
