--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ferns-ui-demo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -47,7 +47,6 @@
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
-    "ferns-ui": "0.25.0",
     "libphonenumber-js": "^1.10.21",
     "moment-timezone": "^0.5.41",
     "react": "18.2.0",
@@ -90,6 +89,7 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
+    "expo-yarn-workspaces": "^2.1.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.4"
   }
