--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -40,37 +40,38 @@
     "react": "18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@expo/config-plugins": "~7.2.2",
-    "@expo/webpack-config": "^19.0.0",
-    "@shopify/flash-list": "1.4.3",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "eslint": "^8.55.0",
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo/config-plugins": "~7.8.0",
+    "@expo/webpack-config": "~19.0.1",
+    "@shopify/flash-list": "1.6.3",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "eslint": "^8.56.0",
     "eslint-config-ferns": "^0.5.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-comment-length": "^1.7.2",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-comment-length": "^1.7.3",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-lodash": "^7.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
-    "eslint-plugin-react-perf": "^3.3.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "3.0.0",
-    "expo": "^49.0.21",
-    "expo-status-bar": "~1.6.0",
-    "expo-yarn-workspaces": "~2.2.0",
-    "postcss": "8.4.33",
-    "prettier": "^3.1.1",
+    "eslint-plugin-react-perf": "^3.3.2",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-unused-imports": "3.1.0",
+    "expo": "^50.0.7",
+    "expo-status-bar": "~1.11.1",
+    "expo-yarn-workspaces": "~2.3.2",
+    "postcss": "8.4.35",
+    "prettier": "^3.2.5",
     "react-keyed-flatten-children": "^3.0.0",
     "react-native-haptic-feedback": "^2.0.3",
     "react-native-hyperlink": "^0.0.22",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-swiper-flatlist": "^3.2.3",
-    "react-native-web": "~0.19.9",
-    "swiper": "^11.0.1",
+    "react-native-web": "~0.19.10",
+    "swiper": "^11.0.6",
     "typescript": "^5.3.3"
   },
   "engine": {
