--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,8 @@
     "lintfix": "eslint --fix \"src/**/*.ts*\"",
     "build": "tsc",
     "dev": "tsc -w",
-    "deps": "node checkDeps.js"
+    "deps": "node checkDeps.js",
+    "postinstall": "patch-package"
   },
   "babel": {
     "presets": [
@@ -154,6 +155,8 @@
     "expo-localization": "~14.8.3",
     "libphonenumber-js": "^1.10.56",
     "lodash": "^4.17.21",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react-app-polyfill": "^3.0.0",
     "react-date-picker": "^10.5.2",
     "react-datetime-picker": "^5.5.3",
@@ -162,7 +165,7 @@
     "react-native": "0.73.4",
     "react-native-actions-sheet": "^0.9.2",
     "react-native-calendars": "^1.1301.0",
-    "react-native-drawer-layout": "3.2.2",
+    "react-native-drawer-layout": "^3.2.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-modalize": "^2.1.1",
@@ -174,6 +177,7 @@
     "react-native-svg": "14.1.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-toast-notifications": "^3.4.0",
+    "react-native-webview": "^13.6.4",
     "react-signature-canvas": "^1.0.6",
     "react-time-picker": "^6.5.2"
   }
