--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,8 +48,28 @@
       "project": "./tsconfig.json",
       "tsconfigRootDir": "./"
     },
+    "plugins": [
+      "ban"
+    ],
     "rules": {
-      "@typescript-eslint/explicit-function-return-type": "off"
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "ban/ban": [
+        "error",
+        {
+          "name": [
+            "dayjs",
+            "*"
+          ],
+          "message": "Use Luxon."
+        },
+        {
+          "name": [
+            "moment",
+            "*"
+          ],
+          "message": "Use Luxon"
+        }
+      ]
     }
   },
   "files": [
@@ -82,6 +102,7 @@
     "babel-preset-react-app": "^10.0.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-ban": "^1.6.0",
     "eslint-plugin-comment-length": "^1.7.3",
     "eslint-plugin-ferns": "^0.3.0",
     "eslint-plugin-import": "^2.29.1",
