--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -45,6 +45,6 @@ jobs:
         run: yarn build
         working-directory: 'packages/ui'
       - name: yarn test
-        run: yarn test
+        run: yarn test:ci
         env:
           CI: true
