--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -81,9 +81,9 @@
     "src/**/*"
   ],
   "devDependencies": {
-    "@expo/config-plugins": "~7.9.1",
+    "@expo/config-plugins": "~8.0.0",
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.0",
+    "@types/lodash": "^4.17.4",
     "@types/luxon": "^3.4.2",
     "@types/mdurl": "^2.0.0",
     "@types/react": "~18.2.45",
@@ -108,33 +108,33 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-unused-imports": "3.2.0",
     "jest": "^29.7.0",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~51.0.2",
     "jest-github-actions-reporter": "^1.0.3",
     "mdurl": "^2.0.0",
     "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-keyed-flatten-children": "^3.0.0",
-    "react-router": "^6.22.1",
-    "react-router-dom": "^6.22.1",
+    "react-router": "^6.23.0",
+    "react-router-dom": "^6.23.0",
     "tsc-watch": "^6.0.4",
-    "typescript": "^5.4.5"
+    "typescript": "~5.3.3"
   },
   "peerDependencies": {
     "react": "18.2.0",
-    "react-router": "^6.22.1",
-    "react-router-dom": "^6.22.1"
+    "react-router": "^6.23.0",
+    "react-router-dom": "^6.23.0"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.1",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.4.0",
-    "@react-native-community/datetimepicker": "7.6.1",
-    "@react-native-picker/picker": "2.6.1",
-    "expo-clipboard": "~5.0.1",
-    "expo-font": "~11.10.3",
-    "expo-haptics": "~12.8.1",
-    "expo-image-manipulator": "~11.8.0",
-    "expo-image-picker": "~14.7.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "2.7.5",
+    "expo-clipboard": "~6.0.3",
+    "expo-font": "~12.0.5",
+    "expo-haptics": "~13.0.1",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.5",
     "expo-localization": "~14.8.4",
     "libphonenumber-js": "^1.10.61",
     "lodash": "^4.17.21",
@@ -145,22 +145,22 @@
     "react-datetime-picker": "^6.0.1",
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-actions-sheet": "^0.9.3",
     "react-native-calendars": "^1.1304.1",
     "react-native-drawer-layout": "3.3.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^4.1.5",
     "react-native-picker-select": "^9.1.3",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "~3.10.1",
     "react-native-signature-canvas": "^4.7.2",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "15.2.0",
     "react-native-swiper-flatlist": "^3.2.4",
     "react-native-toast-notifications": "^3.4.0",
-    "react-native-webview": "13.6.4",
+    "react-native-webview": "13.8.6",
     "react-signature-canvas": "^1.0.6",
     "react-time-picker": "^7.0.0"
   }
